FSBI presentation update

--- a/docs/FSBI_conf/Talk/DOLDER_FSBI_Talk.tex
+++ b/docs/FSBI_conf/Talk/DOLDER_FSBI_Talk.tex
@@ -123,16 +123,15 @@
 	\item As the EU moves towards a 'landings obligation' - all fish will
 		caught count against quota. \pause
 	\item Fish populations are heterogeneously distributed in space and
-		time.  \pause
-	\item Increased interest is spatio-temporal dynamics to see how spatial
-		measures can contribute to sustainable fisheries. 
+		time. Increased interest is spatio-temporal dynamics to see how
+		spatial measures can contribute to sustainable fisheries. 
 \end{itemize}
 	
 \end{columns}
 
 \end{frame}
 
-\begin{frame}{Motivation behind work}
+\begin{frame}{Motivation}
 
 \begin{columns}
 \column{0.4\paperwidth}
@@ -147,7 +146,7 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}{Motivation behind work}
+\begin{frame}{Motivation}
 	
 \begin{itemize}
 \small	
@@ -175,7 +174,7 @@
 
 \begin{frame}
 
-Modelling framework:
+Modelling framework (VAST):
 \pause
 
 \begin{enumerate}
@@ -193,7 +192,7 @@ Modelling framework:
 		rates (so called 'delta' and 'hurdle' models),  \pause
 	\item set in a mixed modelling framework allowing the incorporation of
 		both systematic (fixed) effects and random effects. 
-
+	
 \end{enumerate}
 
 \end{frame}
@@ -274,13 +273,13 @@ Modelling framework:
 
 \end{frame}
 
-\begin{frame}{Spatial coverage}
-
-\centering
-\includegraphics[width=1\linewidth]{Survey_locations-1}
-
+\begin{frame}
+	\centering
+	\includegraphics[height = 3cm]{IMG_9160}
+	\includegraphics[height = 3cm]{IMG_9267} \\
+	\includegraphics[height = 5cm]{IMG_9192}
+	\includegraphics[height = 5cm]{Paul_Dolder}
 \end{frame}
-
 
 \begin{frame}
 
@@ -320,7 +319,10 @@ Modelling framework:
 
 \begin{frame}{Spatial fields}
 \centering
-\includegraphics[width=0.9\paperwidth]{SpatialDataAndKnotsLand}
+\includegraphics[width=0.9\paperwidth]{SpatialDataAndKnotsLand} \\
+\vspace{-0.5cm}
+\includegraphics[width=0.2\paperwidth]{inlamesh}
+
 \end{frame}
 
 
@@ -352,14 +354,18 @@ Modelling framework:
 \begin{frame}{Spatial patterns driving distributions and density}
 
 \centering
+\tiny
+Spatial Encounter Probability
 \includegraphics[width = \linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1"}
 \\
+Spatial Density
 \includegraphics[width = \linewidth]{"Figure 2 - SpatialFactorLoadingsOmega2"}
 	
 \end{frame}
 
-\begin{frame}{What drives these patterns}
+\begin{frame}{What drives these patterns?}
 \centering
+\pause
 \includegraphics[width = 0.4\linewidth]{"Factor1_DepthO1"}
 \includegraphics[width = 0.5\linewidth]{"Depth"} \\
 \pause
@@ -481,7 +487,7 @@ taking account of the yearly variation?
 \section{Conclusions}
 \subsection{Blah}
 
-\begin{frame}
+\begin{frame}{Key messages}
 \begin{itemize}
 \small	
 \setlength\itemsep{1em}
@@ -491,10 +497,9 @@ taking account of the yearly variation?
 	\item Applied to main Celtic Sea commercial fish species indicates
 		spatial separation among three broad species groups: demersal
 		roundfish, flatfish and deeper water species;
-	\item Latent variables from the factor analysis shows the dynamics are
-		driven common spatial trends - indicates the strong
-		associations among species groups are driven by the
-		environment; 
+	\item Factor analysis shows the dynamics are driven common spatial
+		trends - indicates the strong associations among species groups
+		are driven by the environment; 
 	\item Implications for spatial avoidance under the EU landings
 		obligation: how far can space be used to match catch to
 		available quota?
@@ -506,15 +511,18 @@ taking account of the yearly variation?
 \begin{frame}{Acknowledgements}
 \centering
 \includegraphics[height=3cm]{"Coilin_Minto"} \hspace{1cm}
-%% \includegraphics[height=3cm, angle = -90]{"Paul_Dolder"} \hspace{0.1cm}
 \includegraphics[height=3cm]{"Jim_Thorson"} \\
 \vspace{1cm}
-\includegraphics[width = 4cm]{seedcorn_logo_white_navy_bkgd} 
+\includegraphics[width = 2.5cm]{seedcorn_logo_white_navy_bkgd} 
 \hspace{0.5cm}
-\includegraphics[width = 4cm]{MARES} 
+\includegraphics[width = 2.5cm]{MARES}  
 \hspace{0.5cm}
-\includegraphics[width = 4cm]{ichec_logo} 
+\includegraphics[width = 2.5cm]{ichec_logo} 
+\hspace{0.5cm}
+\includegraphics[width = 2.5cm]{FSBI} 
 
+\tiny 
+References: \url{www.github.com/james-thorson/VAST}
 
 \end{frame}
 
@@ -542,7 +550,17 @@ taking account of the yearly variation?
 
 \appendix
 \section{Add. slides}
-\subsection{Blah}
+\subsection{Blahi}
+
+
+\begin{frame}{Spatial coverage}
+
+\centering
+\includegraphics[width=1\linewidth]{Survey_locations-1}
+
+\end{frame}
+
+
 \begin{frame}{Methodology summary}
 
 \begin{itemize}
