Updated slides for FSBI talk

--- a/docs/FSBI_conf/Talk/DOLDER_FSBI_Talk.tex
+++ b/docs/FSBI_conf/Talk/DOLDER_FSBI_Talk.tex
@@ -105,7 +105,7 @@
 	
 	
 \column{0.3\paperwidth}
-\vspace{-2cm}
+\vspace{-1.5cm}
 \includegraphics[height=3cm, width=4cm]{techInteractions}\\ 
 \includegraphics[height=3cm, width=4cm]{discarding} 
 
@@ -147,7 +147,13 @@
 \end{frame}
 
 \begin{frame}{Motivation}
+
+\begin{columns}
 	
+\column{0.3\paperwidth}
+\includegraphics[width  = \linewidth]{boat}
+
+\column{0.7\paperwidth}
 \begin{itemize}
 \small	
 \setlength\itemsep{1em}
@@ -162,7 +168,12 @@
 		data we have. \pause
 	\item Provide insight into how far spatial measures and avoidance can
 		go to improving sustainability of mixed fisheries.
+
 \end{itemize}
+
+
+
+\end{columns}
 
 \end{frame}
 
@@ -175,11 +186,19 @@
 \begin{frame}
 
 Modelling framework (VAST):
+
+\begin{columns}
+
+	\column{0.2\paperwidth}
+	
+	\includegraphics[width  = 0.8\linewidth]{survey_locations}
+
+	\column{0.8\paperwidth}
 \pause
 
 \begin{enumerate}
 	\small
-	\setlength\itemsep{2em}
+	\setlength\itemsep{1em}
 
 	\item Joint Dynamic Species Distribution Model (JDSDM) able to take
 		account of latent (unobserved) drivers which affect species
@@ -194,6 +213,8 @@ Modelling framework (VAST):
 		both systematic (fixed) effects and random effects. 
 	
 \end{enumerate}
+
+\end{columns}
 
 \end{frame}
 
@@ -277,8 +298,9 @@ Modelling framework (VAST):
 	\centering
 	\includegraphics[height = 3cm]{IMG_9160}
 	\includegraphics[height = 3cm]{IMG_9267} \\
-	\includegraphics[height = 5cm]{IMG_9192}
-	\includegraphics[height = 5cm]{Paul_Dolder}
+	\includegraphics[height = 4cm]{IMG_9192}
+	\includegraphics[height = 4cm]{IMG_9279}
+	\includegraphics[height = 4cm]{Paul_Dolder}
 \end{frame}
 
 \begin{frame}
